test/simple/correct/PatternMatchBug3.hs
module PatternMatchBug3 where

main = f "a" "a"

f "a" x = x
   