test/simple/typeerrors/Examples/PatNegatePat.hs
module PatNegatePat where

f (- "schaap") = 42
